# tiengviet

./: README.md  deck.json
scripts/: pyproject.toml
scripts/app/: app.py
senses/: main.js  package-lock.json  package.json  utils.js
templates/pitch_contour/: back.html  front.html  styles.css
tiengviet/: deck.json
