[project]
name = ""
version = ""
description = ""
authors = [
    {name = "haiturtle", email = "33427880+dethereum@users.noreply.github.com"},
]
dependencies = [
    "pydantic>=1.10.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
